# Python_Learning

./: .editorconfig  .gitignore  AA_SCratch.ipynb  Log.txt  Practice.pyproj  Practice_Notebook_1.ipynb  TypeValidations.ipynb  Untitled-1.pgsql  Untitled.ipynb  _test_vim.py  almabetter_sql_1.pgsql  bin to text.py  cast.pgsql  compare1.py  compare2.py  df.map.ipynb  df.select_dtypes().ipynb  diagonal.py  enumerate.py  enummerate.py  importtest.py  lab.bat  lmplot.ipynb  markdown_example_1.mds.md  nullif.pgsql  password.py  person.py  persondb.bak  pyproject.toml  pythonsql.py  qr with icon  scratch.ipynb  scratch.py  sfa.py  tempCodeRunnerFile.py  test.py  testadd.ipynb  testadd.py  twodimensionlist.py  untitled.py  (+3 more)
.github/: copilot-instructions.md
.ipynb_checkpoints/: testadd-checkpoint.ipynb  testadd-checkpoint.py
.tmp.driveupload/: 7744  7748  7752  7756  7760  7764  7768  7772  7776  7780  7784  7788  7794  7798  7802  7804
API/: async_pool.py  pycoingecko API.ipynb  watson API.ipynb
A_Snippets/: nanCount.py
Advance Built-In Functions/: Enclosed Function.ipynb  Untitled.ipynb  assert.py  dataclasses_module.py  eval().py  eval_for_import.py  exceptions.py  importtest.py  iter.py  onlykeyargs.ipynb  slice().py  zip().py
Algorithms and Data stuctures freecodecamp.org/: Binary Search.py  Binary_search_2.py  Binary_search_recursive.py  Linear Search.py  Linear_search_2.py  arrays.py  linked_list.py  linked_list_merge_sort.py  load.py  merge_sort.py  quick_sort integer.py  recursion.py  selection_sort.py  test_list1.txt
Basic In Built Functions/: LogFile.txt  (+55 more)
(+1185 files in other folders)
