[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-learning-common"
version = "0.1.0"
description = "Shared common utilities for the Python_Learning repository"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["common", "common.db"]
